2014-08-19  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* configure.ac:
	* Headers/GNUstepBase/config.h.in: Add test for grantpt function.

	* configure: Regenerated.

2014-07-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m:
	* Source/GSPrivate.h:
	* Source/NSLog.m:

2014-07-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Tools/gdomap.c: Unless running on windows, allow new -j
	command-line argument to specify the path in which the process should
	be jailed (chroot).  The default remains to jail the process in /tmp
	since there doesn't seem to be a general, portable alternative.

2014-07-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSSocketStream.m: Fix handling TLS handshake in the case
	where there is a network failure during the handshake (bug#42781).
	* Source/GSTLS.m: Fix erroneous attempt to load revocation lists.
	* Tests/base/NSURLConnection/test01.m: https test contributed by
	Sergei Golovin.

2014-07-25  Richard Frith-Macdonald <rfm@gnu.org>

        * configure.ac: Remove compiler charset options
        * config.mak.in: Remove compiler charset options
        * configure: regenerate:
        Yavor pointed out that the gcc manual is wrong and gcc (all the
        versions we support anyway) always uses utf-8 (as does clang),
        so we can get rid of stuff intended to try to force it to use utf8

2014-07-13  Yavor Doganov  <yavor@gnu.org>

	Add large file support (LFS) for NSData.
	* configure.ac: Call AC_FUNC_FSEEKO/AC_SYS_LARGEFILE.
	* Source/NSData.m (readContentsOfFile): Use fseeko/ftello and
	off_t as appropriate.
	(-initWithContentsOfFile:): Define fileLength of type off_t.
	* Source/GSFileHandle.m:
	* Source/win32/GSFileHandle.m:
	* Source/NSFileManager.m: Remove _FILE_OFFSET_BITS define (now
	defined globally in config.h).

2014-07-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSRunLoop.m: ([-runMode:beforeDate:]) check performers as
	well as notifications etc ... should fix bug #39107
